[package]
name = "tokiolearn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mini-redis = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-tun = "0.7.0"
pnet = "0.31.0"
pnet_base = "0.31.0"
tokio-stream = "0.1.11"
byteorder = "1.4.3"
clap = { version = "4.0.32", features = ["derive"] }
tokio-util = "0.7.4"
log = "0.4.0"
env_logger = "0.10.0"
ipnet = "2.7.1"

[[example]]
name = "hello-redis"
path = "example_1/hello-redis.rs"

[[bin]]
name = "selecttest"
path = "src/bin/selecttest.rs"
